--- a/wp-content/themes/jaenando/style.css
+++ b/wp-content/themes/jaenando/style.css
@@ -447,7 +447,7 @@ footer{
         .cf:after { clear: both; }
 #comarca{}
 #comarca h1{font-size: 1.5em;border: none}
-#comarca article{border-radius:5%;box-shadow:0 0 10px #999;padding: 1em;background-color: #fff}
+#comarca article{box-shadow:0 0 10px #999;padding: 1em;background-color: #fff}
 #comarca article header.entry-header{}
 #comarca article header h2{font-family: 'Oleo Script', cursive;}
 #comarca article header img{box-shadow:0 0 5px #999;}
