--- a/wp-content/themes/jaenando/style.css
+++ b/wp-content/themes/jaenando/style.css
@@ -98,7 +98,7 @@ body{overflow-x:hidden;background:url('css/fabric_plaid.png');border-top:.3em so
 }
 /*Content*/
 #content{
-	box-shadow: rgba(0, 0, 0, 0.498039) 0px 0px 10px inset;
+	/*box-shadow: rgba(0, 0, 0, 0.498039) 0px 0px 10px inset;*/
 }
 	/***Inicio*/
 	#inner-content{
@@ -349,7 +349,9 @@ footer{
 	border:solid 1px #aaa;
 	background: url('css/wild_oliva.png');
 	width:100%;
-	min-height: 15em;
+	max-height: 1.5em;
+	position: fixed;
+	bottom: 0;
 }
 #footer div *{
 	margin:0 auto;
@@ -464,4 +466,7 @@ footer{
 }
 .btns{margin-top:.8em;}
 .btns a i{font-size: 35px;}
-.ui-tooltip{width: auto;font-size:1.3em ;font-family: 'Maven Pro', sans-serif;border-radius:5%;padding:1px;display: inline-block;position: relative;margin: 0 auto; left: 40% !important;background-color: #777}
+.tooltipster-base{
+	margin-left: 50px;
+	margin-top: 50px;
+}
